<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.bikeguard.mobile.bikeguard.MainActivity"
        tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/launch_help_center_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_help_center"
        android:layout_marginBottom="177dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/show_open_requests_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/launch_help_center_button"
        android:layout_alignEnd="@+id/launch_help_center_button"
        android:layout_alignLeft="@+id/launch_help_center_button"
        android:layout_alignRight="@+id/launch_help_center_button"
        android:layout_alignStart="@+id/launch_help_center_button"
        android:layout_marginBottom="20dp"
        android:text="@string/show_current_status" />

    <Button
        android:id="@+id/chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_button"
        android:layout_above="@+id/show_open_requests_button"
        android:layout_marginBottom="30dp"
        android:layout_alignRight="@+id/show_open_requests_button"
        android:layout_alignEnd="@+id/show_open_requests_button"
        android:layout_alignLeft="@+id/show_open_requests_button"
        android:layout_alignStart="@+id/show_open_requests_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chat_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:gravity="center"
        android:text="@string/help_center" />

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chat_button"
        android:layout_alignEnd="@+id/chat_button"
        android:layout_alignLeft="@+id/chat_button"
        android:layout_alignRight="@+id/chat_button"
        android:layout_alignStart="@+id/chat_button"
        android:layout_marginBottom="13dp"
        android:text="@string/button"
        tools:text="Call Us" />

</RelativeLayout>






